# compas

./: .gitignore  AGENTS.md  AI_AGENT_FAILURE_MODES.md  ARCHITECTURE.md  Cargo.toml  GOALS.md  PHILOSOPHY.md  README.md  WIKI.md  compas.md  dx
crates/ai-dx-mcp/: Cargo.toml
crates/ai-dx-mcp/src/: api.rs  app.rs  cli.rs  cli_plugins.rs  config.rs  evidence.rs  exceptions.rs  failure_modes.rs  gate_jobs.rs  gate_runner.rs  hash.rs  lib.rs  main.rs  mcp_stdio.rs  registry_manifest.rs  repo.rs  repo_import.rs  repo_strict.rs  repo_view.rs  response.rs  runner.rs  server.rs  server_catalog.rs  structured_report.rs  validate_insights.rs  wasm.rs  witness.rs
crates/ai-dx-mcp/src/api/: canonical.rs  init.rs  insights.rs
crates/ai-dx-mcp/src/app/: support.rs
crates/ai-dx-mcp/src/checks/: arch_layers.rs  boundary.rs  common.rs  complexity_budget.rs  contract_break.rs  dead_api.rs  duplicates.rs  loc.rs  (+7 more)
crates/ai-dx-mcp/tests/: allow_any_detection.rs  boundary_check.rs  cli_init.rs  cli_plugins.rs  cli_plugins_archive_security.rs  cli_plugins_manifest.rs  cli_plugins_signature.rs  cli_plugins_tier_policy.rs  docs_plugins_contract.rs  duplicates_check.rs  env_registry_check.rs  exception_ttl_policy.rs  flagship_gap_regressions.rs  gaming_scenarios.rs  gate_runner_invariants.rs  judge_integration.rs  mcp_smoke.rs  p01_tool_policy.rs  p04_antigaming.rs  p06_plugin.rs  p07_plugin.rs  p10_sbom_gate.rs  p20_performance_budget_gate.rs  public_surface_check.rs  quality_delta_integration.rs  repo_imports.rs  supply_chain_check.rs  tool_budget_check.rs  tool_duplicate_detection.rs
(+182 files in other folders)
