[package]
name = "ai-dx-mcp"
version = "0.1.0"
edition = "2024"

[features]
# default = compas-full; `--no-default-features` = compas-lite.
default = ["full"]

# Umbrella feature for the "full" distribution; keep it lean and additive.
full = ["external_packs"]

# External packs: archive vendoring + (future) download. Lite build fails closed.
external_packs = ["dep:reqwest", "dep:flate2", "dep:tar"]

# Experimental WASM init-plugins sandbox (opt-in; intentionally not enabled by default).
wasm = ["dep:wasmtime"]

[dependencies]
rmcp = { version = "0.15.0", features = ["transport-io"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "process", "time", "io-std", "io-util"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.19"
thiserror = "2.0.11"
walkdir = "2.5.0"
globset = "0.4.15"
schemars = "1.2.1"
chrono = "0.4.38"
regex = "1.11.1"
sha2 = "0.10.8"
base64 = "0.22.1"
p256 = { version = "0.13.2", features = ["ecdsa", "pem"] }
fs4 = "0.9.1"
glob = "0.3.1"
flate2 = { version = "1.0.35", optional = true }
tar = { version = "0.4.44", optional = true }
reqwest = { version = "0.12.12", optional = true, default-features = false, features = ["rustls-tls"] }
wasmtime = { version = "20.0.2", optional = true }

[dev-dependencies]
tempfile = "3.10.1"
rmcp = { version = "0.15.0", features = ["client"] }
wat = "1.0.83"
